Dev dependencies and readme update

--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,13 @@ verify_ssl = true
 
 [dev-packages]
 pylint = "*"
+black = "*"
 
 [packages]
 lxml = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
